# rabbot-rl-walk

./: .gitignore  README.md  pyproject.toml
model/: quadruped_air.xml
src/: plot_training.py  quadruped_air_env.py  train_quadruped.py  visualize.py
